@@ -465,6 +465,7 @@ Text renderer is now silent if there's no violation instead of displaying "No pr
 RuleSet short names now require a language prefix, 'basic' is now 'java-basic', and 'rulesets/basic.xml' is now 'rulesets/java/basic.xml'
 The JSP RuleSets are now in the 'jsp' language, and are 'jsp-basic', 'jsp-basic-jsf', 'rulesets/jsp/basic.xml' and 'rulesets/jsp/basic-jsp.xml'
 Enhanced logging in the ClassTypeResolver to provide more detailed messaging.
+AvoidUsingHardCodedIP modified to not use InetAddress.getByName(String), instead does better pattern analysis.
 
 New Java rules:
 
